# marimo_ai_sandbox

./: .gitignore  README.md  pixi.toml  runnables.yaml
.github/workflows/: publish-image.yml
conf/: config.default.toml  config.toml
container/: common.sh  entrypoint.sh  https-wrap.sh
container/app/: agents_demo.py  pyproject.toml
container/apptainer/: build.sh  marimo.def  marimo.sh  shell.sh
container/podman/: Containerfile  build.sh  marimo.sh  shell.sh
container/skills/marimo-pair/reference/: execution-context.md  finding-marimo.md
container/skills/marimo-pair/scripts/: execute-code.sh
